# Fitness-Tracker

./: .gitignore  Assignment 1  CMakeLists.txt  CONTRIBUTING.md  README.md  docker-compose.yml  dockerfile  email.env.example  sprint_report_1.md  sprint_report_2.md
.github/ISSUE_TEMPLATE/: user-story.md
code/: Database_Information.txt 
code/backend/: LogIn.cpp  LogIn.h  fitness.db  goalTracker.cpp  goalTracker.h  goals.cpp  hash.cpp  hash.h  helper.cpp  helper.h  invites.h  leaderboard.cpp  leaderboard.h  main.cpp  reset.h
code/backend/db/: schema.cpp  schema.h  workout_db.cpp  workout_db.h
code/backend/routes/: calorie_tracker.cpp  calorie_tracker.h  exercise.cpp  exercise.h  goalTracker.cpp  goalTracker.h  invites.cpp  leaderboard.cpp  login.cpp  register.cpp  register.h  reset.cpp  score_tracker.cpp  score_tracker.h  session.cpp  session.h  sleep_tracker.cpp  sleep_tracker.h  workout.cpp  workout.h
code/frontend/: CalorieTracker.html  HomePage.html  SleepTracker.html  UserRegistration.html  WebHome.html  completedGoals.html  emailReset.html  exercise.html  goalTracker.html  leaderboard.html  login.html  newpassword.html  sessions.html  social.html  weekly.html  workouts.html
docs/MoM/: MoM-2025_10_13.md  MoM_2025-10_24.md  MoM_2025_10_1.md  MoM_2025_10_2.md  MoM_2025_10_29.md  MoM_2025_9_22.md  MoM_2025_9_29.md  TEMPLATE_MoM.md
docs/PresentationsVideos/: Sprint1.md
